# ROS-Feature-Tracking

./: README.md
devel/: .catkin  _setup_util.py  local_setup.sh
devel/include/vision_tracking/: Position.h
devel/lib/gimbal_control/: GimbalControlNode  gimbal_control_node
devel/lib/pkgconfig/: gimbal_control.pc  vision_tracking.pc
devel/lib/python2.7/dist-packages/vision_tracking/msg/: _Position.py
devel/share/common-lisp/ros/vision_tracking/msg/: Position.lisp  _package.lisp  _package_Position.lisp  vision_tracking-msg.asd
devel/share/gennodejs/ros/vision_tracking/msg/: Position.js
devel/share/gimbal_control/cmake/: gimbal_controlConfig.cmake
devel/share/roseus/ros/vision_tracking/: manifest.l
devel/share/roseus/ros/vision_tracking/msg/: Position.l
devel/share/vision_tracking/cmake/: vision_tracking-msg-paths.cmake  vision_trackingConfig.cmake
launch/: sensor_gimbal_activate.launch
src/gimbal_control/: CMakeLists.txt  package.xml
src/gimbal_control/config/: gimbal_control_node.xml
src/gimbal_control/include/: i2c.h
src/gimbal_control/include/gimbal_control/: PID.h  gimbal_control.h  i2c_bus.h  pid.h
src/gimbal_control/launch/: gimbal_control.launch
src/gimbal_control/src/: 2  PID.cpp  gimbal_communication_node.cpp  gimbal_control.cpp  gimbal_control_node.cpp  i2c.cpp  i2c_bus.cpp  pid.cpp
src/vision_tracking/: CMakeLists.txt  package.xml
src/vision_tracking/config/: vision_tracking_node.xml
src/vision_tracking/msg/: Position.msg
src/vision_tracking/scripts/: pi_video_stream.py  vision_tracking_node.py
src/vision_tracking/src/: vision_tracking_node.cpp
